--- a/index.html
+++ b/index.html
@@ -9,13 +9,7 @@
     }
 
     #pixel-renderer {
-      position: static;
-      width: 100%;
-      height: 100vh;
-      top: 0;
-      left: 0;
-      background-color: black;
-      color: white;
+      display: inline-block;
       font-family: monospace;
       white-space: pre;
       font-size: 7px;
